# agentgraph

./: .gitignore  Cargo.toml  KNOWN_ISSUES.md  LICENSE  README.md  SCHEMA.md  build.rs  config.yaml  repro_audio_cpal.rs  repro_vision.py  run_diagnostics.py  run_multi_diagnostics.py  run_vision_diag.py  test_config.yaml  test_config_uniqueness.yaml
.cargo/: config.toml
ag-api-bluesky/: Cargo.toml
ag-api-bluesky/src/: main.rs
ag-api-debug-ui/: Cargo.toml
ag-api-debug-ui/src/: main.rs
ag-api-http/: Cargo.toml
ag-api-http/src/: main.rs
ag-api-matrix/: Cargo.toml
ag-api-matrix/src/: main.rs
ag-api-signal/: Cargo.toml
ag-api-signal/src/: main.rs
ag-api-telegram/: Cargo.toml
ag-api-telegram/src/: main.rs
ag-api-whatsapp/: Cargo.toml
ag-api-whatsapp/src/: main.rs
ag-config/: Cargo.toml
ag-config/src/: lib.rs
ag-designer/: Cargo.toml  README.md
ag-designer/src/: main.rs
ag-ipc/: Cargo.toml
ag-ipc/src/: lib.rs
ag-provider-common/: Cargo.toml
ag-provider-common/src/: lib.rs
ag-provider-mistralrs/: Cargo.toml
ag-provider-mistralrs/src/: main.rs
ag-provider-openai/: Cargo.toml
ag-provider-openai/src/: lib.rs
ag-provider-python/: Cargo.toml  build.rs  python_backend.py
ag-provider-python/src/: main.rs
ag-provider-types/: Cargo.toml
ag-provider-types/src/: lib.rs
ag-tool-bash/: Cargo.toml
ag-tool-bash/src/: main.rs
ag-tool-common/: Cargo.toml
ag-tool-common/src/: lib.rs
ag-tool-generate/: Cargo.toml
ag-tool-generate/src/: main.rs
ag-tool-load-skill/: Cargo.toml
ag-tool-load-skill/src/: main.rs
ag-tool-loadctx/: Cargo.toml
ag-tool-loadctx/src/: main.rs
ag-tool-ls/: Cargo.toml
ag-tool-ls/src/: main.rs
ag-tool-mcp-bridge/: Cargo.toml
ag-tool-mcp-bridge/src/: main.rs
ag-tool-read/: Cargo.toml
ag-tool-read-note/: Cargo.toml
ag-tool-read-note/src/: main.rs
ag-tool-read/src/: main.rs
ag-tool-remote-contacts/: Cargo.toml
ag-tool-remote-contacts/src/: main.rs
ag-tool-skills/: Cargo.toml
ag-tool-skills/src/: main.rs
ag-tool-spawn/: Cargo.toml
ag-tool-spawn/src/: main.rs
ag-tool-write-note/: Cargo.toml
ag-tool-write-note/src/: main.rs
ag-utils/: Cargo.toml
ag-utils/src/: lib.rs
examples/: audio_diag.rs
examples/systemd/: agentgraph-leader.service  agentgraph-leader@.service  agentgraph-run@.service  agentgraph-run@.timer
src/: agent.rs  agent.rs.backup  api.rs  audio.rs  command_exec.rs  commands.rs  config.rs  contacts.rs  context.rs  events.rs  inference.rs  inference_provider.rs  ipc.rs  leader.rs  leader.rs.messed  lib.rs  main.rs  messages.rs  model.rs  model_loader.rs  plugin_provider.rs  provider_registry.rs  remote_session.rs  types.rs  utils.rs
src/context/: compression.rs  mod.rs  summary.rs
test_audio/: .gitignore  run_test.sh
test_audio/agent_a/system/: prompt.txt
test_audio/agent_b/system/: prompt.txt
test_subagents/: run_test.sh
test_subagents/oneshot_c/system/: prompt.txt
test_subagents/oneshot_d/system/: prompt.txt
test_subagents/supervisor/system/: prompt.txt
test_subagents/watcher_a/system/: prompt.txt
test_subagents/watcher_b/system/: prompt.txt
test_tools/: .gitignore  run_test.sh
test_tools/agent_screenshot/system/: prompt.txt
test_tools/agent_summary/system/: prompt.txt
test_tools/agent_vision/system/: prompt.txt
test_vision/: run_test.sh
test_vision/agent_b/system/: prompt.txt
tests/: audio.rs  colony.rs  common.rs  integration.rs  test_audio.rs  test_subagents.rs  test_tools.rs  test_vision.rs
