[workspace]
members = [".", "ag-designer", "ag-config"]

[package]
name = "agentgraph"
version = "0.1.0"
edition = "2024"

[lib]
name = "agentgraph"
path = "src/lib.rs"

[[bin]]
name = "ag"
path = "src/bin/ag.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
notify = "6"
base64 = "0.22"
walkdir = "2"
image = "0.25"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs" }
humantime = "2.3.0"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
rand = { version = "0.10.0" }
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
cpal = { version = "0.18", features = ["pipewire"], git = "https://github.com/RustAudio/cpal" }
flume = "0.12.0"
bytemuck = "1.25.0"
bitflags = "2.11.0"
serde_yaml = "0.9.34"
ag-config = { path = "ag-config" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tempfile = "3"
hound = "3.5.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = { version = "0.5", features = ["util"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["cuda", "cudnn", "flash-attn"]
cuda = ["mistralrs/cuda"]
cudnn = ["mistralrs/cudnn"]
metal = ["mistralrs/metal"]
flash-attn = ["mistralrs/flash-attn"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]
nccl = ["mistralrs/nccl"]
ring = ["mistralrs/ring"]

[dev-dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }
image = "0.25"
http-body-util = "0.1"
