[package]
name = "ag-api-bluesky"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ag-api-bluesky"
path = "src/main.rs"

[dependencies]
ag-ipc = { path = "../ag-ipc" }
ag-utils = { path = "../ag-utils" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }
serde = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9.34"
