[package]
name = "ag-api-telegram"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ag-api-telegram"
path = "src/main.rs"

[dependencies]
ag-ipc = { path = "../ag-ipc" }
ag-utils = { path = "../ag-utils" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = "1"
serde_yaml = "0.9.34"
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ag-config = { path = "../ag-config" }
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "query", "multipart"] }
tempfile = "3"
