[package]
name = "ag-provider-python"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ag-provider-python"
path = "src/main.rs"

[dependencies]
ag-provider-common = { path = "../ag-provider-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros", "process", "io-util", "io-std"] }
