[package]
name = "ag-tool-generate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ag-tool-generate"
path = "src/main.rs"

[dependencies]
ag-tool-common = { path = "../ag-tool-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }
uuid = { version = "1", features = ["v4"] }
