[package]
name = "ag-tool-mcp-bridge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ag-tool-mcp-bridge"
path = "src/main.rs"

[dependencies]
ag-tool-common = { path = "../ag-tool-common" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros", "io-util"] }
