[package]
name = "ag-tool-spawn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ag-tool-spawn"
path = "src/main.rs"

[dependencies]
ag-tool-common = { path = "../ag-tool-common" }
ag-ipc = { path = "../ag-ipc" }
ag-config = { path = "../ag-config" }
ag-utils = { path = "../ag-utils" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "macros"] }